# 2P-RPG

./: CMakeLists.txt  Utils.h  main.cpp
Character/: Character.cpp  Character.h
Combat/: Action.cpp  Action.h  Combat.cpp  Combat.h
Enemy/: Enemy.cpp  Enemy.h
Files/: FileHandler.cpp  FileHandler.h
Player/: Player.cpp  Player.h
